--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 	<head></head>
 	<body>
 		<h1>My first awesome website!</h1>
-	</body>
+		<img src="https://tenor.com/view/monster-versus-vs-alien-monster-vs-alien-gif-16037253809360562033"/>
+	</body>	
 </html>
